--- a/PrismCommonParts/Views/ViewBehindTextList.xaml
+++ b/PrismCommonParts/Views/ViewBehindTextList.xaml
@@ -6,7 +6,5 @@
              xmlns:local="clr-namespace:PrismCommonParts.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <StackPanel x:Name="TextStack" Orientation="Vertical"/>
 </UserControl>
