--- a/PrismCommonParts/Views/MainWindow.xaml
+++ b/PrismCommonParts/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:prism="http://prismlibrary.com/"
         xmlns:views="clr-namespace:PrismCommonParts.Views"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="600" Width="525" >
+        Title="{Binding Title}" Height="650" Width="525" >
     <Window.Resources>
         <Style TargetType="views:LabelTextBox">
             <Setter Property="Margin" Value="10,5,10,5" />
@@ -17,6 +17,8 @@
     </Window.Resources>
     <Grid HorizontalAlignment="Stretch">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -69,6 +71,20 @@
                 <!-- MVVMTextListにとってのDataContextがMVVMTextListになるため、バインドできない -->
                 <views:LabelTextBox Label="{Binding ViewBehindLabelValue}" Text="{Binding ViewBehindTextValue}"/>
             </views:MVVMTextList>
+        </Grid>
+        <Border Grid.Row="7" Grid.ColumnSpan="3"/>
+        <Grid Grid.Row="8">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="cs のみの部品"/>
+            <views:CSOnlyTextList Grid.Row="1">
+                <!-- 全部できる -->
+                <views:LabelTextBox Label="1番目ラベル" Text="1番目テキスト"/>
+                <views:LabelTextBox Label="{Binding CsOnlyLabelValue}" Text="{Binding CsOnlyTextValue}"/>
+                <views:LabelTextBox x:Name="CsOnlyTextBox" Label="3番目ラベル" Text="3番目テキスト"/>
+            </views:CSOnlyTextList>
         </Grid>
     </Grid>
 </Window>
